<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>luna_controller</name>
  <version>0.0.0</version>
  <description>Nodes for sending and receiving controller data for the FIU Lunabotics rover</description>
  <maintainer email="marcelohdez.inq@gmail.com">mhdez</maintainer>
  <!-- TODO: add other maintainers -->
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
